Volviendo al Collectors.toList()