@@ -5,6 +5,7 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * Representa a un usuario en la aplicación.
@@ -29,7 +30,7 @@ public record Usuario(String usuario, String password, String jwtToken, List<Rol
 	public Collection<? extends GrantedAuthority> getAuthorities() {
 		return getRoles().stream()
 				.map(RolUsuario::getGrantedAuthority)
-				.toList();
+				.collect(Collectors.toList());
 	}
 
 	@Override
